Fix reviews area on IE11

--- a/src/components/reviews/reviews.scss
+++ b/src/components/reviews/reviews.scss
@@ -30,7 +30,9 @@ $reviews_form-submit-button-icon-pos: 'no-icon' !default;
     flex: 1 1 0;
 
     .ie11 & {
-        flex-basis: auto;
+        @include media('<laptop') {
+            flex-basis: auto;
+        }
     }
 
     @include media('<laptop') {
